--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -1,5 +1,5 @@
 .Toolbar {
-  height: 56px;
+  height: 80px;
   width: 100%;
   position: fixed;
   top: 0;
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
+  padding: 0 60px 0 20px;
   box-sizing: border-box;
   z-index: 90;
 }
