feat(toolbar): darken the background to make the font more pop

--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #2c6e7c;
+  background-color: #183c44;
   display: flex;
   justify-content: space-between;
   align-items: center;
