--- a/src/containers/Layout/Layout.module.css
+++ b/src/containers/Layout/Layout.module.css
@@ -2,3 +2,11 @@
   background-color: #183c44;
   height: 100%;
 }
+
+.Content {
+  margin-top: 80px;
+  background-color: #183c44;
+  color: #7fffd4;
+  height: 800px;
+  padding: 150px 0;
+}
