feat(scrolling): add scrolling to about me and polyfills for safari

--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -1,9 +1,10 @@
-.Introduction {
+.AboutMe {
   padding: 0 100px;
+  color: rgb(204, 214, 246);
 }
 
 .Heading {
-  margin-bottom: 15px;
+  color: rgb(204, 214, 246);
 }
 
 .Description {
