--- a/src/components/Introduction/Introduction.module.css
+++ b/src/components/Introduction/Introduction.module.css
@@ -14,3 +14,9 @@
   margin-bottom: 30px;
   color: rgb(204, 214, 246);
 }
+
+@media (max-width: 702px) {
+  .Introduction {
+    margin-bottom: 200px;
+  }
+}
