--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -1,10 +1,10 @@
 .Experience {
-  padding: 150px 50px 0 100px;
+  padding: 150px 0 0 100px;
   color: rgb(204, 214, 246);
 }
 
 .Heading {
-  color: rgb(204, 214, 246);
+  color: #fff;
 }
 
 .Description {
