--- a/src/components/UI/MasterDetail/MasterDetail.module.css
+++ b/src/components/UI/MasterDetail/MasterDetail.module.css
@@ -7,11 +7,12 @@
 .SelectList li {
   list-style-type: none;
   cursor: pointer;
-
+  color: rgb(204, 214, 246) rgb(204, 214, 246);
   padding: 14px;
 }
 
 .SelectList li:hover,
 .SelectList li.Active {
   background-color: rgba(127, 255, 212, 0.09);
+  color: #7fffd4;
 }
