--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,7 +1,6 @@
-.Experience {
-  padding: 150px 0 0 100px;
+.AboutMe {
+  padding: 0 100px;
   color: rgb(204, 214, 246);
-  margin-bottom: 200px;
 }
 
 .Heading {
@@ -16,7 +15,7 @@
 }
 
 @media (max-width: 702px) {
-  .Experience {
+  .AboutMe {
     padding: 0 50px;
   }
 }
