--- a/src/components/Work/Work.module.css
+++ b/src/components/Work/Work.module.css
@@ -1,6 +1,7 @@
 .Contact {
   padding: 0 100px;
   color: rgb(204, 214, 246);
+  margin-bottom: 350px;
 }
 
 .Heading {
@@ -17,5 +18,6 @@
 @media (max-width: 702px) {
   .Contact {
     padding: 0 50px;
+    margin-bottom: 200px;
   }
 }
