adjust scroll to top for mobile

--- a/src/components/Navigation/ScrollToTop/ScrollToTop.module.css
+++ b/src/components/Navigation/ScrollToTop/ScrollToTop.module.css
@@ -17,3 +17,10 @@
 .Hidden {
   display: none;
 }
+
+@media (max-width: 702px) {
+  .ScrollToTop {
+    padding: 10px 15px;
+    right: 15px;
+  }
+}
