--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -11,6 +11,8 @@
   padding: 0 60px 0 20px;
   box-sizing: border-box;
   z-index: 90;
+  transition: transform 0.5s ease-out;
+  transition: 0.5s ease-in;
 }
 
 .Toolbar nav {
@@ -19,6 +21,16 @@
 
 .Logo {
   height: 80%;
+}
+
+.Stacked {
+  box-shadow: 0 1px 9px grey;
+  height: 60px;
+  transition: 0.5s ease-in;
+}
+
+.Hidden {
+  transform: translateY(-100%);
 }
 
 @media (max-width: 702px) {
