--- a/src/containers/Layout/Layout.module.css
+++ b/src/containers/Layout/Layout.module.css
@@ -4,11 +4,12 @@
 }
 
 .Content {
-  margin-top: 80px;
+  margin-top: 0px;
   background-color: #183c44;
   color: #7fffd4;
   height: 100%;
   padding: 250px 10% 250px 20%;
+  transition: 0.5s ease-in;
 }
 
 h2::before {
