--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -14,6 +14,31 @@
   margin-bottom: 30px;
 }
 
+.GridList {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(140px, 200px));
+  overflow: hidden;
+  padding: 0px;
+  margin: 20px 0px 0px;
+  list-style: none;
+}
+
+.GridListItem {
+  position: relative;
+  margin-bottom: 10px;
+  padding-left: 20px;
+}
+
+.GridListItem::before {
+  content: '»';
+  position: absolute;
+  left: 0px;
+  color: rgb(100, 255, 218);
+  font-size: 14px;
+  line-height: 12px;
+  padding-top: 4px;
+}
+
 @media (max-width: 702px) {
   .AboutMe {
     padding: 0 50px;
