--- a/src/components/UI/Card/Card.module.css
+++ b/src/components/UI/Card/Card.module.css
@@ -4,8 +4,7 @@
   box-shadow: 0 1px 9px grey;
   padding: 4px;
   height: 400px;
-  width: auto;
-  min-width: 390px;
+  min-width: 250px;
   z-index: 1;
   margin-bottom: 50px;
 }
@@ -72,5 +71,14 @@
   }
   .Card > .Description {
     right: 20px;
+  }
+  .Card > .Description > ul {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(80px, 200px));
+    overflow: hidden;
+    padding: 0px;
+    margin: 20px 0px 0px;
+    list-style: none;
+    font-size: 0.85rem;
   }
 }
