--- a/src/components/UI/Card/Card.module.css
+++ b/src/components/UI/Card/Card.module.css
@@ -7,6 +7,7 @@
   min-width: 250px;
   z-index: 1;
   margin-bottom: 50px;
+  animation: slide-up 0.6s ease;
 }
 
 .Card > .Feature {
@@ -85,5 +86,16 @@
     margin: 20px 0px 0px;
     list-style: none;
     font-size: 0.85rem;
+  }
+}
+
+@keyframes slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
