--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,6 +1,7 @@
 .Contact {
   padding: 0 100px;
   color: rgb(204, 214, 246);
+  animation: slide-in 0.6s ease;
 }
 
 .Heading {
@@ -17,5 +18,16 @@
 @media (max-width: 702px) {
   .Contact {
     padding: 0 50px;
+  }
+}
+
+@keyframes slide-in {
+  0% {
+    opacity: 0;
+    transform: translateX(-50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
