--- a/src/components/Navigation/ScrollToTop/ScrollToTop.module.css
+++ b/src/components/Navigation/ScrollToTop/ScrollToTop.module.css
@@ -8,6 +8,7 @@
   border-radius: 4px;
   opacity: 0.8;
   z-index: 500;
+  animation: slide-in 0.6s ease;
 }
 
 .ScrollToTop:hover {
@@ -23,5 +24,16 @@
   .ScrollToTop {
     padding: 10px 15px;
     right: 15px;
+  }
+}
+
+@keyframes slide-in {
+  0% {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
