--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -13,6 +13,7 @@
   z-index: 90;
   transition: transform 0.5s ease-out;
   transition: 0.5s ease-in;
+  animation: slide-in 0.6s ease;
 }
 
 .Toolbar nav {
@@ -36,5 +37,16 @@
 @media (max-width: 702px) {
   .DesktopOnly {
     display: none;
+  }
+}
+
+@keyframes slide-in {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
