add blog to toolbar

--- a/src/components/Navigation/NavigationItems/NavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.css
@@ -10,6 +10,10 @@
   display: inline-flex;
 }
 
+.TextColor {
+  color: #c8cfd0 !important;
+}
+
 @media (max-width: 702px) {
   .NavigationItems {
     flex-flow: column;
